# AoC-2022

./: CMakeLists.txt
day_1/: solve.c
day_10/: solve.c
day_11/: solve.c
day_2/: solve.c
day_3/: solve.c
day_4/: solve.c
day_5/: solve.c
day_6/: solve.c
day_7/: solve.c
day_8/: solve.c
day_9/: solve.c
misc/: utils.c  utils.h
